--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html lang="en">
 	<head>
+		<link rel="manifest" href="/manifest.json">
+		<link rel="icon" href="/logo.png" sizes="192x192">
+		<link rel="icon" href="/logo.png" sizes="512x512">
+		<meta name="theme-color" content="#0d6efd">
+
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<link
